# theonlinemcmc

./: .gitignore  LICENSE  OLD_THEONLINEMCMC.sql  README.md  bilbycreatedata.js  copysite.sh  createdata.js  createdata_modern.js  emailresponse.py  errorpage.py  footer.inc  header.inc  index.php  index_tabs.php  index_with_tabs.php  logo.py  main.php  postprocessing.py  pyproject.toml  setup.py  simple.css  social.inc  submitted.php
cron/: remove_old_dirs  remove_old_dirs.sh
notebooks/: PyMC3Example.ipynb  PyStanExample.ipynb  cpnestExample.ipynb
theonlinemcmc/: __init__.py  database.py  emailresponse.py  errorcodes.py  errorpage.py  postprocessing.py
